# Encrypter

./: Cargo.toml
encrypter-client/: Cargo.toml
encrypter-client/src/: chat.rs  events.rs  main.rs  network.rs
encrypter-client/src/events/: handlers.rs  mod.rs
encrypter-client/src/ui/: command_line.rs  mod.rs
encrypter-client/src/ui/components/: chat_list.rs  chat_window.rs  command_line.rs  mod.rs
encrypter-client/src/ui/containers/: chat_container.rs  main_container.rs  mod.rs
encrypter-core/: Cargo.toml
encrypter-core/src/: lib.rs
encrypter-server/: Cargo.toml
encrypter-server/src/: main.rs  peer.rs
