[package]
name = "encrypter-client"
version = "0.1.0"
authors = ["Nehliin <o-nehlin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
tui = "0.7.0"
termion = "1.5"
encrypter-core = {path = "../encrypter-core"}
bincode = "1.2.1"
