[package]
name = "encrypter-client"
version = "0.1.0"
authors = ["Nehliin <o-nehlin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
tui = "0.7"
termion = "1.5"
encrypter-core = {path = "../encrypter-core"}
bincode = "1.2"
x25519-dalek = "0.6"
once_cell = "1.3"
rand = "0.7"
log = "0.4"
simplelog = "0.7"