[package]
name = "encrypter-server"
version = "0.1.0"
authors = ["Nehliin <o-nehlin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.3.0"
encrypter-core = {path = "../encrypter-core"}
futures = "0.3.1"