[package]
name = "encrypter-server"
version = "0.1.0"
authors = ["Nehliin <o-nehlin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.4"
encrypter-core = {path = "../encrypter-core"}
futures = "0.3"
bincode = "1.2"
simplelog = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
